@@ -1,3 +1,4 @@
+* Rename sale state from cancel to cancelled
 * Add window tab for exception states
 
 Version 5.6.0 - 2020-05-04
